# devcontainer-101

./: .devcontainer.json  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: presentation.md
scripts/: install-dev-tools.sh
src/: test.ipynb
